k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-catalog
  namespace: car-catalog
spec:
  rules:
    - host: mvc.carcatalog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
    - host: pages.carcatalog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: razorpages
                port:
                  name: http
    - host: wcf.carcatalog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wcf
                port:
                  name: http
